# viam-visual-odometry

./: Makefile  README.md  meta.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build.yml
src/: __init__.py  main.py  motion.py  my_odometry.py  odometry_module.py  quat_ov.py  scale.py  trajectory.py  utils.py  visual_odometry.py  visualization.py
viz/: README.md  visualization.py
