[tool.poetry]
name = "viam-visual-odometry"
version = "1.0.0"
description = "Viam module for Monocular Visual Odometry"
authors = ["Robin IN <robin@viam.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scipy = "^1.11.1"
numpy = "^1.25.2"
opencv-python = "^4.8.0.74"
pillow = "^10.0.1"
viam-sdk = "^0.4.6"

[tool.poetry.group.visualization.dependencies]
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
